# monit

./: .editorconfig  .gitignore  CHANGES  COPYING  Makefile.am  README  README.md  TODO  configure.ac  justfile  monitrc
.github/workflows/: mirror.yml  release.yml
config/: Info.plist  ax_info.m4
doc/: monit.pod
libmonit/: COPYING  Makefile.am  configure.ac
libmonit/FmtTest/: main.c
libmonit/libmonit.xcodeproj/: project.pbxproj
libmonit/src/: Bootstrap.c  Bootstrap.h  Config.h
libmonit/src/exceptions/: AssertException.h  Exception.c  Exception.h  IOException.h  MemoryException.h  NumberFormatException.h  ProtocolException.h  assert.c  assert.h
libmonit/src/io/: Dir.c  Dir.h  File.c  File.h  InputStream.c  InputStream.h  OutputStream.c  OutputStream.h
libmonit/src/statistics/: Statistics.c  Statistics.h
libmonit/src/system/: Command.c  Command.h  Link.c  Link.h  Mem.c  Mem.h  Net.c  Net.h  Process.h  Random.c  Random.h  Scheduler.c  Scheduler.h  System.c  System.h  Task.h  Time.c  Time.h
libmonit/src/system/os/linux/: Link.inc
libmonit/src/thread/: Atomic.h  Dispatcher.c  Dispatcher.h  Thread.c  Thread.h
libmonit/src/util/: Array.c  Array.h  Convert.c  Convert.h  Fmt.c  Fmt.h  List.c  List.h  Str.c  Str.h  StringBuffer.c  StringBuffer.h
libmonit/test/: ArrayTest.c  CommandTest.c  ConvertTest.c  DirTest.c  DispatcherTest.c  ExceptionTest.c  FileTest.c  FmtTest  FmtTest.c  InputStreamTest.c  LinkTest.c  ListTest.c  Makefile.am  NetTest.c  OutputStreamTest.c  RandomTest.c  SchedulerTest.c  StrTest.c  StringBufferTest.c  SystemTest.c  TimeTest.c  test.sh
monit.xcodeproj/: project.pbxproj
src/: _signal.c  _signal.h  alert.c  alert.h  checksum.c  checksum.h  control.c  control.h  daemonize.c  daemonize.h  env.c  env.h  event.c  event.h  file.c  file.h  gc.c  gc.h  http.c  http.h  l.l  log.c  log.h  md5.c  md5.h  md5_crypt.c  md5_crypt.h  monit.c  monit.h  net.c  p.h  p.y  sha1.c  sha1.h  signal.c  socket.c  socket.h  spawn.c  spawn.h  state.c  (+5 more)
src/device/: device.h  device_common.c  sysdep_AIX.c  sysdep_DARWIN.c  sysdep_DRAGONFLY.c  sysdep_FREEBSD.c  sysdep_LINUX.c  sysdep_NETBSD.c  sysdep_OPENBSD.c  sysdep_SOLARIS.c  sysdep_UNKNOWN.c
src/http/: base64.c  base64.h  cervlet.c  cervlet.h  client.c  client.h  engine.c  engine.h  httpstatus.h  processor.c  processor.h  xml.c  xml.h
src/net/: Link.c  Link.h  net.c  net.h  socket.c  socket.h
src/net/os/aix/: Link.inc
src/net/os/dragonfly/: Link.inc
src/net/os/freebsd/: Link.inc
src/net/os/linux/: Link.inc
src/net/os/macosx/: Link.inc
src/net/os/netbsd/: Link.inc
src/net/os/openbsd/: Link.inc
src/net/os/solaris/: Link.inc
src/notification/: Address.c  Address.h  MMonit.c  MMonit.h  SMTP.c  SMTP.h
src/process/: Proc.c  Proc.h  ProcessTable.c  ProcessTable.h  ProcessTree.c  ProcessTree.h  SystemInfo.c  SystemInfo.h  process_sysdep.h  sysdep_AIX.c  sysdep_DARWIN.c  sysdep_DRAGONFLY.c  sysdep_FREEBSD.c  sysdep_LINUX.c  sysdep_NETBSD.c  sysdep_OPENBSD.c  sysdep_SOLARIS.c  sysdep_UNKNOWN.c
src/protocols/: apache_status.c  clamav.c  default.c  dns.c  dwp.c  fail2ban.c  ftp.c  generic.c  gps.c  http.c  imap.c  ldap2.c  ldap3.c  lmtp.c  memcache.c  mongodb.c  mqtt.c  mysql.c  nntp.c  ntp3.c  pgsql.c  pop.c  postfix_policy.c  protocol.c  protocol.h  radius.c  rdate.c  redis.c  rsync.c  sieve.c  sip.c  smtp.c  spamassassin.c  ssh.c  tns.c  websocket.c
src/ssl/: Ssl.c  Ssl.h  SslServer.h
src/statistics/: Statistics.c  Statistics.h
src/terminal/: Box.c  Box.h  Color.c  Color.h  TextBox.c  TextBox.h  TextColor.c  TextColor.h
system/bash/: monit
system/startup/: monit.service.in  monit.upstart.in
